--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -58,6 +58,7 @@ password.changed: 'La password è stata aggiornata.'
 password.cant_change: 'Questo utente utilizza un metodo di autenticazione esterno. Impossibile cambiare la password.'
 security.forgot_password: 'Password dimenticata'
 security.forgot_password.email_sent: 'Ti è stata spedita una email con le istruzioni per cambiare la password.'
+security.password_expired: ~
 key.tab: ~
 key.space: ~
 comma: ~
