--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -58,6 +58,7 @@ password.changed: 'Parole tika veiksmīgi atjaunota.'
 password.cant_change: 'Šis konts izmanto ārēju pilnvarošanas avotu. Nav iespējams nomainīt paroli.'
 security.forgot_password: 'Nozaudēta parole'
 security.forgot_password.email_sent: 'Jums tika nosūtīts e-pasts ar instrukcijām, kā izveidot jaunu paroli.'
+security.password_expired: ~
 key.tab: ~
 key.space: ~
 comma: ~
