--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -19,6 +19,7 @@ button.import: Importa
 required: obbligatorio
 error.not_found: 'La pagina desiderata non esiste o è stata rimossa.'
 error.not_authorized: 'Non sei autorizzato ad accedere a questa pagina.'
+changes.saved: ~
 security.log_in: Entra
 security.log_out: Esci
 security.remember_me: Ricordami
@@ -28,6 +29,8 @@ security.authentication: Autenticazione
 'Bad credentials': 'Nome utente non riconosciuto o password errata.'
 'User account is disabled.': 'L''account è disabilitato.'
 'User account is locked.': 'L''account è stato bloccato.'
+settings: Impostazioni
+appearance: Aspetto
 administration: Amministrazione
 users: Utenti
 user.new: 'Nuovo utente'
@@ -35,6 +38,7 @@ user.username: 'Nome utente'
 user.fullname: 'Nome completo'
 user.email: Email
 user.password: Password
+user.current_password: Password
 user.new_password: 'Nuova password'
 user.password_confirmation: Conferma
 user.change_password: 'Modifica password'
