--- a/app/Resources/translations/messages.bg.yml
+++ b/app/Resources/translations/messages.bg.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Невалидно потребителско име.'
 password.too_short: 'Паролата трябва да е най-малко с %length% символ дължина.'
 passwords.dont_match: 'Паролите не са еднакви.'
 password.changed: 'Паролата е успешно променена.'
+password.wrong: 'Грешна парола.'
 password.cant_change: 'Този профил е с външен метод за оторизация. Невъзможна смяна на паролата.'
 security.forgot_password: 'Забравена парола'
 security.forgot_password.email_sent: 'Изпратен ви е e-mail с инструкции за избор на нова парола.'
