--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Ungültiger Benutzername.'
 password.too_short: 'Das Passwort muss mindestens %length% Zeichen lang sein.'
 passwords.dont_match: 'Die Passwörter stimmen nicht überein.'
 password.changed: 'Kennwort wurde erfolgreich aktualisiert.'
+password.wrong: 'Falsches Kennwort.'
 password.cant_change: 'Dieses Konto verwendet eine externe Authentifizierungs-Quelle. Unmöglich, das Kennwort zu ändern.'
 security.forgot_password: 'Kennwort vergessen'
 security.forgot_password.email_sent: 'Eine E-Mail mit Anweisungen, ein neues Kennwort zu wählen, wurde Ihnen geschickt.'
