--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Invalid user name.'
 password.too_short: 'Password should be at least %length% characters length.'
 passwords.dont_match: 'Passwords do not match.'
 password.changed: 'Password was successfully updated.'
+password.wrong: 'Wrong password.'
 password.cant_change: 'This account uses an external authentication source. Impossible to change the password.'
 security.forgot_password: 'Forgot password'
 security.forgot_password.email_sent: 'An email with instructions to choose a new password has been sent to you.'
