--- a/app/Resources/translations/messages.es.yml
+++ b/app/Resources/translations/messages.es.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Nombre de usuario inválido.'
 password.too_short: 'La contraseña debe tener una logintud mínima de %length% caracteres.'
 passwords.dont_match: 'Las contraseñas no coinciden.'
 password.changed: 'Contraseña modificada correctamente.'
+password.wrong: 'Contraseña incorrecta.'
 password.cant_change: 'Esta cuenta utiliza una fuente de autenticación externa. No es posible cambiar la contraseña.'
 security.forgot_password: '¿Olvidaste la contraseña?'
 security.forgot_password.email_sent: 'Se le ha enviado un correo con instrucciones para elegir una nueva contraseña.'
