--- a/app/Resources/translations/messages.hu.yml
+++ b/app/Resources/translations/messages.hu.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Érvénytelen felhasználónév.'
 password.too_short: 'A jelszónak legalább %length% hosszúságúnak kell lennie.'
 passwords.dont_match: 'A jelszavak nem egyeznek.'
 password.changed: 'A jelszó módosítása megtörtént.'
+password.wrong: 'Hibás jelszó.'
 password.cant_change: 'A fiók külső azonosítási forrást használ. A jelszó megváltoztatása nem lehetséges.'
 security.forgot_password: 'Elfelejtett jelszó'
 security.forgot_password.email_sent: 'Egy e-mail üzenetben postáztunk Önnek egy leírást az új jelszó beállításáról.'
