--- a/app/Resources/translations/messages.lv.yml
+++ b/app/Resources/translations/messages.lv.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Nezināms lietotāja vārds.'
 password.too_short: 'Parolei jāsatur vismaz %length% simbolu.'
 passwords.dont_match: 'Paroles nesakrīt.'
 password.changed: 'Parole tika veiksmīgi atjaunota.'
+password.wrong: 'Nepareiza parole.'
 password.cant_change: 'Šis konts izmanto ārēju pilnvarošanas avotu. Nav iespējams nomainīt paroli.'
 security.forgot_password: 'Nozaudēta parole'
 security.forgot_password.email_sent: 'Jums tika nosūtīts e-pasts ar instrukcijām, kā izveidot jaunu paroli.'
