--- a/app/Resources/translations/messages.nl.yml
+++ b/app/Resources/translations/messages.nl.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Ongeldige gebruikersnaam.'
 password.too_short: 'Wachtwoord moet tenminste %length% tekens bevatten.'
 passwords.dont_match: 'Wachtwoorden stemmen niet overeen.'
 password.changed: 'Wachtwoord is met succes gewijzigd'
+password.wrong: 'Incorrect wachtwoord.'
 password.cant_change: 'Dit account gebruikt een externe bron voor authenticatie. Het is niet mogelijk om het wachtwoord te veranderen.'
 security.forgot_password: 'Wachtwoord verloren'
 security.forgot_password.email_sent: 'Er is een e-mail naar u verstuurd met instructies over het kiezen van een nieuw wachtwoord.'
