--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Nieprawidłowa nazwa użytkownika.'
 password.too_short: 'Hasło powinno mieć co najmniej %length% znaków.'
 passwords.dont_match: 'Hasła nie są identyczne.'
 password.changed: 'Hasło prawidłowo zmienione.'
+password.wrong: 'Złe hasło.'
 password.cant_change: 'To konto ma zewnętrzne źródło uwierzytelniania. Nie możesz zmienić hasła.'
 security.forgot_password: 'Zapomniane hasło'
 security.forgot_password.email_sent: 'E-mail z instrukcjami zmiany hasła został wysłany do Ciebie.'
