--- a/app/Resources/translations/messages.pt_BR.yml
+++ b/app/Resources/translations/messages.pt_BR.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Usuário Inválido.'
 password.too_short: 'A senha deve conter pelo menos %length% caracteres.'
 passwords.dont_match: 'As senhas não conferem.'
 password.changed: 'Senha alterada com sucesso.'
+password.wrong: 'Senha inválida.'
 password.cant_change: 'Esta conta utiliza autenticação externa. Não é possível alterar a senha.'
 security.forgot_password: 'Perdi minha senha'
 security.forgot_password.email_sent: 'Um e-mail com instruções para escolher uma nova senha foi enviado para você.'
