--- a/app/Resources/translations/messages.ru.yml
+++ b/app/Resources/translations/messages.ru.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Неверное имя пользователя.'
 password.too_short: 'Пароль должен содержать как минимум %length% символов.'
 passwords.dont_match: 'Пароли не совпадают.'
 password.changed: 'Пароль успешно обновлён.'
+password.wrong: 'Неверный пароль.'
 password.cant_change: 'Для данной учётной записи используется источник внешней аутентификации. Невозможно изменить пароль.'
 security.forgot_password: 'Восстановление пароля'
 security.forgot_password.email_sent: 'Вам отправлено письмо с инструкциями по выбору нового пароля.'
