--- a/app/Resources/translations/messages.tr.yml
+++ b/app/Resources/translations/messages.tr.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Geçersiz kullanıcı adı.'
 password.too_short: 'Parola en az %length% karakter uzunluğunda olmalıdır.'
 passwords.dont_match: 'Parolalar uyuşmuyor.'
 password.changed: 'Parola başarıyla güncellendi.'
+password.wrong: 'Yanlış parola.'
 password.cant_change: 'Bu hesap harici bir denetim kaynağı kullanıyor. Parolayı değiştirmek mümkün değil.'
 security.forgot_password: 'Parolamı unuttum'
 security.forgot_password.email_sent: 'Yeni parola seçme talimatlarını içeren e-postanız gönderildi.'
