--- a/app/Resources/translations/messages.cs.yml
+++ b/app/Resources/translations/messages.cs.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Neplatné uživatelské jméno.'
 password.too_short: 'Heslo musí být dlouhé alespoň %length% znaků.'
 passwords.dont_match: 'Hesla se neshodují.'
 password.changed: 'Heslo bylo úspěšně změněno.'
+password.wrong: 'Chybné heslo.'
 password.cant_change: 'Tento účet používá externí autentifikaci. Zde heslo změnit nemůžete.'
 security.forgot_password: 'Zapomenuté heslo'
 security.forgot_password.email_sent: 'Byl vám zaslán email s intrukcemi jak si nastavíte nové heslo.'
