--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Nom utilisateur invalide.'
 password.too_short: 'Le mot de passe doit comporter au moins %length% caracteres.'
 passwords.dont_match: 'Les mots de passe ne correspondent pas.'
 password.changed: 'Mot de passe mis à jour avec succès.'
+password.wrong: 'Mot de passe incorrect.'
 password.cant_change: 'Ce compte utilise une authentification externe. Impossible de changer le mot de passe.'
 security.forgot_password: 'Mot de passe perdu'
 security.forgot_password.email_sent: 'Un message contenant les instructions pour choisir un nouveau mot de passe vous a été envoyé.'
