--- a/app/Resources/translations/messages.it.yml
+++ b/app/Resources/translations/messages.it.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Nome utente non valido.'
 password.too_short: 'La password deve essere almeno lunga %length% caratteri.'
 passwords.dont_match: 'Le password non coincidono.'
 password.changed: 'La password è stata aggiornata.'
+password.wrong: 'Password errata.'
 password.cant_change: 'Questo utente utilizza un metodo di autenticazione esterno. Impossibile cambiare la password.'
 security.forgot_password: 'Password dimenticata'
 security.forgot_password.email_sent: 'Ti è stata spedita una email con le istruzioni per cambiare la password.'
