--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Nume utilizator invalid.'
 password.too_short: 'Parola trebuie sa aiba cel putin %length% caractere.'
 passwords.dont_match: 'Parola nu este identica.'
 password.changed: 'Parolă actualizată.'
+password.wrong: 'Parolă greșită.'
 password.cant_change: 'Acest cont folosește o sursă externă de autentificare. Nu se poate schimba parola.'
 security.forgot_password: 'Parolă uitată'
 security.forgot_password.email_sent: 'S-a trimis un email cu instrucțiuni de schimbare a parolei.'
