--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -59,6 +59,7 @@ user.invalid.username: 'Ogiltigt användarnamn.'
 password.too_short: 'Lösenord ska vara minst %length% tecken långt.'
 passwords.dont_match: 'Lösenorden matchar inte.'
 password.changed: 'Lösenordet har uppdaterats'
+password.wrong: 'Fel lösenord.'
 password.cant_change: 'Detta konto använder en extern autentiseringskälla. Det går inte att byta lösenord.'
 security.forgot_password: 'Glömt lösenord'
 security.forgot_password.email_sent: 'Ett mail med instruktioner om hur man väljer ett nytt lösenord har skickats till dig.'
