--- a/app/Resources/translations/messages.de.yml
+++ b/app/Resources/translations/messages.de.yml
@@ -96,3 +96,8 @@ project.active: Aktiv
 project.suspended: Ausgesetzt
 project.confirm.delete: 'Möchten Sie dieses Projekt wirklich löschen?'
 project.conflict.name: 'Ein Projekt mit diesem Namen existiert bereits.'
+template.conflict.name: 'Eine Anfrageart mit diesem Namen existiert bereits.'
+template.conflict.prefix: 'Eine Anfrageart mit diesem Präfix existiert bereits.'
+state.conflict.name: 'Ein Status mit diesem Namen existiert bereits.'
+state.conflict.abbreviation: 'Ein Status mit diesem Abkürzung existiert bereits.'
+field.conflict.name: 'Ein Zusatz mit diesem Namen existiert bereits.'
