--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -96,3 +96,8 @@ project.active: Active
 project.suspended: Suspended
 project.confirm.delete: 'Are you sure you want delete this project?'
 project.conflict.name: 'Project with entered name already exists.'
+template.conflict.name: 'Template with entered name already exists.'
+template.conflict.prefix: 'Template with entered prefix already exists.'
+state.conflict.name: 'State with entered name already exists.'
+state.conflict.abbreviation: 'State with entered abbreviation already exists.'
+field.conflict.name: 'Field with entered name already exists.'
