--- a/app/Resources/translations/messages.pl.yml
+++ b/app/Resources/translations/messages.pl.yml
@@ -96,3 +96,8 @@ project.active: Aktywny
 project.suspended: Zawieszony
 project.confirm.delete: 'Czy jesteś pewien, że chesz usunąć wybrany projekt?'
 project.conflict.name: 'Projekt o podanej nazwie już istnieje.'
+template.conflict.name: 'Szablon o podanej nazwie już istnieje.'
+template.conflict.prefix: 'Szablon o podanej prefixie już istnieje.'
+state.conflict.name: 'Stan o tej nazwie już istnieje.'
+state.conflict.abbreviation: 'Stan o tej skrót już istnieje.'
+field.conflict.name: 'Pole o podanej nazwie już istnieje.'
