--- a/app/Resources/translations/messages.ro.yml
+++ b/app/Resources/translations/messages.ro.yml
@@ -96,3 +96,8 @@ project.active: Activ
 project.suspended: Suspendat
 project.confirm.delete: 'Sunteti sigur ca doriti sa stergeti acest proiect?'
 project.conflict.name: 'Numele de proiect exista deja.'
+template.conflict.name: 'Sablonul cu numele introdus exista deja.'
+template.conflict.prefix: 'Sablonul prefixul introdus exista deja.'
+state.conflict.name: 'Numele starii deja exista.'
+state.conflict.abbreviation: 'Prescurtarea starii deja exista.'
+field.conflict.name: 'Numele campului deja exista.'
