--- a/app/Resources/translations/messages.sv.yml
+++ b/app/Resources/translations/messages.sv.yml
@@ -96,3 +96,8 @@ project.active: Aktiv
 project.suspended: Inaktiv
 project.confirm.delete: 'Är du säker på att du vill ta bort detta projektet?'
 project.conflict.name: 'Projekt med detta namnet finns redan.'
+template.conflict.name: 'Mall med detta namnet finns redan.'
+template.conflict.prefix: 'Mall med detta prefixet finns redan.'
+state.conflict.name: 'Status med detta namnet finns redan.'
+state.conflict.abbreviation: 'Status med detta förkortningen finns redan.'
+field.conflict.name: 'Fält med detta namnet finns redan.'
